--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:watch":"npm test --watch"
+  },
+  "devDependencies": {
+    "react-test-renderer": "^16.4.1"
   }
 }
